# Babylon

./: .gitignore  .gitmodules  CMakeLists.txt  Model.cpp  Project 2.sln
Project 2/: Bitmap.cpp  Bitmap.hpp  BoxTreeNode.cpp  BoxTreeNode.hpp  BoxTreeObject.cpp  BoxTreeObject.hpp  Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  DirectLight.cpp  DirectLight.hpp  FogVolume.cpp  FogVolume.hpp  InstanceObject.cpp  InstanceObject.hpp  Intersection.hpp  IsotropicScatter.h  LambertMaterial.cpp  LambertMaterial.hpp  Light.hpp  LorenzMieScatter.hpp  Material.hpp  MeshObject.cpp  MeshObject.hpp  MetalMaterial.cpp  MetalMaterial.hpp  Object.hpp  PointLight.cpp  PointLight.hpp  Project 2.cpp  Project 2.vcxproj  Project 2.vcxproj.filters  Ray.hpp  RayTrace.cpp  RayTrace.hpp  ScatterPhase.hpp  Scene.cpp  Scene.hpp  Triangle.cpp  (+5 more)
Raycast Renderer/Raycast Renderer.xcodeproj/: project.pbxproj
Raycast Renderer/Raycast Renderer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
examples/: CMakeLists.txt  ashikminTest.cpp  basic.cpp  example.aps
include/: AnisotropicPhongMaterial.hpp  Bitmap.hpp  BoxTreeNode.hpp  BoxTreeObject.hpp  CMakeLists.txt  Camera.hpp  Color.hpp  DirectLight.hpp  FogVolume.hpp  Image.hpp  Intersection.hpp  IsotropicScatter.hpp  LambertMaterial.hpp  Light.hpp  LorenzMieScatter.hpp  Material.hpp  MeshObject.hpp  MetalMaterial.hpp  Model.hpp  ModelObject.hpp  Object.hpp  Rand.hpp  Ray.hpp  RayTrace.hpp  ScatterPhase.hpp  Texture.hpp  TextureMaterial.hpp  Triangle.hpp  Utilities.hpp  Vertex.hpp  Volume.hpp
source/: AnisotropicPhongMaterial.cpp  Bitmap.cpp  BoxTreeNode.cpp  BoxTreeObject.cpp  CMakeLists.txt  Camera.cpp  Color.cpp  FogVolume.cpp  Image.cpp  InstanceObject.cpp  LambertMaterial.cpp  MeshObject.cpp  MetalMaterial.cpp  Model.cpp  ModelObject.cpp  RayTrace.cpp  Scene.cpp  Texture.cpp  TextureMaterial.cpp  Triangle.cpp  main.cpp
